Fixed bug in dark mode

--- a/assets/styles/sections/building.scss
+++ b/assets/styles/sections/building.scss
@@ -29,9 +29,12 @@ body {
   background-color: #ffb101;
   border: 3px solid black;
 
-  color: black;
   text-align: center;
   font-family: Stardos Stencil, cursive;
+}
+
+.building-section-content * {
+  color: black!important;
 }
 
 .building-section-content b {
